quick fix for align-content value

--- a/web/wp-content/themes/nats-philanthropies-theme/modules/gridCard/scss/_gridCard.scss
+++ b/web/wp-content/themes/nats-philanthropies-theme/modules/gridCard/scss/_gridCard.scss
@@ -4,7 +4,7 @@
 	flex-wrap: wrap;
 	min-height: 316px;
 	position: relative;
-  align-content: start;
+  align-content: flex-start;
 
 	&:hover {
 
